--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,100..900;1,100..900&family=Comfortaa:wght@300..700&family=Orbitron:wght@600&family=Share+Tech+Mono&family=Yanone+Kaffeesatz:wght@200..700&display=swap" rel="stylesheet">
         </head>
     <body>
-        <div class="background"></div>
+      <div class="containere">
         <header>
             <h1>Сатурн </h1>
             <div class="i">
@@ -57,5 +57,6 @@
          </p>
          <a href="https://www.google.com/search?sca_esv=8b94fdf9c54254b4&sxsrf=ACQVn0-1JpUgWRzEBMIrF1sRh2i96_vpAA:1710060150471&q=%D1%81%D0%B0%D1%82%D1%83%D1%80%D0%BD+%D1%86%D1%96%D0%BA%D0%B0%D0%B2%D1%96+%D1%84%D0%B0%D0%BA%D1%82%D0%B8&tbm=vid&source=lnms&sa=X&ved=2ahUKEwjGtsC-pumEAxVChP0HHefxBq0Q0pQJegQIChAB&biw=1366&bih=607&dpr=1#"><img src="https://i.ytimg.com/vi/eWKp6_Cjq9U/mqdefault.jpg?sqp=-oaymwEFCJQBEFM&rs=AMzJL3la9ySWG4H4ok4b4q7fKKmUYdmmlg"></a>
      </footer>
+      </div>
     </body>
 </html>
